--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-deep-populate": "^3.0.0",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "socket.io": "^1.7.3",
